bearish-bullish done

--- a/candlestick/abandoned-baby-pattern/index.html
+++ b/candlestick/abandoned-baby-pattern/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Bullish Abandoned Baby</h4>
-        <img src="bullish-abandoned-baby1.png" alt="Bullish Abandoned Baby Pattern">
+        <h4>Abandoned Baby Pattern</h4>
+        <img src="abandoned-baby-pattern1.png" alt="Abandoned Baby Pattern Pattern">
     </div>
 
     <div id="content">
-        این الگو (کودك رها شده صعودی) در بازار فارکس خیلی کم به وجود می آید. در انتهای روند نزولی پس از یک شمع نزولی
-        قوی شکافی نزولی تا شمع بعدی بوجود می آید شمع بعدی بصورت ستاره (داجی) بسته می شود و فاصله بسته شدنش تا
-        شمع بعدی نیز دارای شکاف است. با سفید (صعودی) بسته شدن بدنه شمع سوم اخطار پایان روند نزولی و آغاز روند صعودی
+        این الگو (کودك رها شده نزولی) در بازار فارکس خیلی کم به وجود می آید. در انتهای روند صعودی پس از یک شمع صعودی
+        قوی شکافی صعودی تا شمع بعدی به وجود می آید. شمع بعدی بصورت ستاره(داجی) بسته می شود و فاصله بسته شدنش تا
+        شمع بعدی نیز دارای شکاف است. با مشکی (نزولی) بسته شدن بدنه شمع سوم اخطار پایان روند صعودی و آغاز روند نزولی
         به وجود می آید.
     </div>
 
