--- a/candlestick/bearish-harami/index.html
+++ b/candlestick/bearish-harami/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Bearish Harami</h4>
+        <img src="bearish-harami1.png" alt="Bearish Harami Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        این الگو نیز در انتهای روند صعودی تشکیل می شود و اخطار تغییر روند را صادر می کند. شمع اول بدنه سفید (صعودی) دارد
+        که تمامی بدنه شمع دوم را پوشش می دهد سایه ها در این الگو اهمیت زیادی ندارند اما خارج نشدن سایه های شمع دوم از
+        محدوده سایه های شمع اول قدرت بیشتر این الگو را نشان می دهد.
     </div>
 
     <script src="../../assets/script.js"></script>
