--- a/candlestick/bearish-tri-star/index.html
+++ b/candlestick/bearish-tri-star/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Bearish Tri-Star</h4>
+        <img src="bearish-tri-star1.png" alt="Bearish Tri-Star Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        الگوی سه ستاره نزولی از ترکیب سه شمع Doji مانند تشکیل شده، اندازه سایه ها در این سه شمع حائز اهمیت نمی باشد اما
+        وجود شکاف (گپ) صعودی بین شمع اول و دوم و شکاف نزولی بین شمع دوم و سوم بر قدرت این الگو برای تغییر روند از
+        صعودی به نزولی می افزاید.
     </div>
 
     <script src="../../assets/script.js"></script>
