--- a/candlestick/bullish-harami-cross/index.html
+++ b/candlestick/bullish-harami-cross/index.html
@@ -23,16 +23,18 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Bullish Harami Cross</h3>
+        <h4>Bullish Harami Cross</h4>
         <img src="bullish-harami-cross1.png" alt="Bullish Harami Cross Pattern">
     </div>
-    <br>
 
     <div id="content">
-        صلیب هارامی صعودي (هارامی کراس) شباهت بسیاري به الگوي قبلی دارد با این تفاوت که بدنه شمع دوم حتما بصورت
-        داجی (ستاره) تشکیل شده است این الگو در انتهاي روند نزولی تشکیل می شود و اخطار تغییر روند را صادر می کند.
+        صلیب هارامی صعودی (هارامی کراس) شباهت بسیاری به الگوی قبلی دارد با این تفاوت که بدنه شمع دوم حتما بصورت
+        داجی (ستاره) تشکیل شده است این الگو در انتهای روند نزولی تشکیل می شود و اخطار تغییر روند را صادر می کند.
     </div>
 
     <script src="../../assets/script.js"></script>
