--- a/candlestick/bullish-harami/index.html
+++ b/candlestick/bullish-harami/index.html
@@ -23,17 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Bullish Harami</h3>
+        <h4>Bullish Harami</h4>
         <img src="bullish-harami1.png" alt="Bullish Harami Pattern">
     </div>
-    <br>
 
     <div id="content">
-        الگوي هارامی صعودي نیز در انتهاي روند نزولی تشکیل می شود و اخطار تغییر روند را صادر می کند. شمع اول بدنه مشکی
-        (نزولی) دارد که تمامی بدنه شمع دوم را پوشش می دهد سایه ها در این الگو اهمیت زیادي ندارند اما خارج نشدن سایه هاي
-        شمع دوم از محدوده سایه هاي شمع اول قدرت بیشتر این الگو را نشان می دهد.
+        الگوی هارامی صعودی نیز در انتهای روند نزولی تشکیل می شود و اخطار تغییر روند را صادر می کند. شمع اول بدنه مشکی
+        (نزولی) دارد که تمامی بدنه شمع دوم را پوشش می دهد سایه ها در این الگو اهمیت زیادی ندارند اما خارج نشدن سایه های
+        شمع دوم از محدوده سایه های شمع اول قدرت بیشتر این الگو را نشان می دهد.
     </div>
 
     <script src="../../assets/script.js"></script>
