--- a/candlestick/bullish-piercing-line/index.html
+++ b/candlestick/bullish-piercing-line/index.html
@@ -23,17 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Bullish Piercing Line</h3>
+        <h4>Bullish Piercing Line</h4>
         <img src="bullish-piercing-line1.png" alt="Bullish Piercing Line Pattern">
     </div>
-    <br>
 
     <div id="content">
-        در این الگو (پوشش شکاف صعودي) شاهد دو شمع با رنگ هاي متفاوت هستیم. در شمع اول بدنه مشکی (نزولی) و شمع
-        دوم بدنه اي سفید (صعودي) با نقطه پایانی پایین تر از نقطه آغازین شمع قبلی می بینیم و نقطه آغاز شمع دوم با شکافی
-        نزولی نسبت به پایان شمع اول شروع شده است. این الگو در انتهاي روند نزولی تشکیل شده و نمایشگر آغاز روند صعودي می
+        در این الگو (پوشش شکاف صعودی) شاهد دو شمع با رنگ های متفاوت هستیم. در شمع اول بدنه مشکی (نزولی) و شمع
+        دوم بدنه ای سفید (صعودی) با نقطه پایانی پایین تر از نقطه آغازین شمع قبلی می بینیم و نقطه آغاز شمع دوم با شکافی
+        نزولی نسبت به پایان شمع اول شروع شده است. این الگو در انتهای روند نزولی تشکیل شده و نمایشگر آغاز روند صعودی می
         باشد.
     </div>
 
