--- a/candlestick/bullish-tri-star/index.html
+++ b/candlestick/bullish-tri-star/index.html
@@ -23,17 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Bullish Tri-Star</h3>
+        <h4>Bullish Tri-Star</h4>
         <img src="bullish-tri-star1.png" alt="Bullish Tri-Star Pattern">
     </div>
-    <br>
 
     <div id="content">
-        الگوي سه ستاره صعودي از ترکیب سه شمع Doji مانند تشکیل شده اندازه سایه ها در این سه شمع حائز اهمیت نمی باشد
-        اما وجود شکاف (گپ) نزولی بین شمع اول و دوم و شکاف صعودي بین شمع دوم و سوم بر قدرت این الگو براي تغییر روند از
-        نزولی به صعودي می افزاید.
+        الگوی سه ستاره صعودی از ترکیب سه شمع Doji مانند تشکیل شده اندازه سایه ها در این سه شمع حائز اهمیت نمی باشد
+        اما وجود شکاف (گپ) نزولی بین شمع اول و دوم و شکاف صعودی بین شمع دوم و سوم بر قدرت این الگو برای تغییر روند از
+        نزولی به صعودی می افزاید.
     </div>
 
     <script src="../../assets/script.js"></script>
