--- a/candlestick/hammer/index.html
+++ b/candlestick/hammer/index.html
@@ -23,17 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Hammer</h3>
+        <h4>Hammer</h4>
         <img src="hammer1.png" alt="Hammer Pattern">
     </div>
-    <!-- <br> -->
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        الگوی چکش (الگوی هامر Hammer) در انتهای یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
+        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه ای حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
+        ندارد اما بدنه صعودی (سفید) قدرت بیشتر این الگو را برای بازگشت روند نشان می دهد.
     </div>
 
     <script src="../../assets/script.js"></script>
