--- a/candlestick/hanging-man/index.html
+++ b/candlestick/hanging-man/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Hanging Man</h4>
+        <img src="hanging-man1.png" alt="Hanging Man Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        الگوی (Man Hanging) مرد دارزده در انتهای یک روند صعودی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
+        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه ای حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
+        ندارد اما بدنه نزولی (مشکی) قدرت بیشتر این الگو را برای بازگشت روند نشان می دهد.
     </div>
 
     <script src="../../assets/script.js"></script>
