--- a/candlestick/index.html
+++ b/candlestick/index.html
@@ -22,84 +22,177 @@
     </a>
     <h2>الگوهای کندل استیک ها</h2>
 
-    <div id="content" class="table">
+    <h4 id="content">
         <div class="item">
-            <a href="hammer/index.html">
-                <h3>Hammer</h3>
-                <img src="hammer/hammer1.png" alt="Hammer Pattern">
-            </a>
+            <h3 id="bullish-reversals">الگوهای برگشتی صعودی</h3>
         </div>
+        <div class="table">
+            <div class="item">
+                <a href="hammer/index.html">
+                    <h4>Hammer</h4>
+                    <img src="hammer/hammer1.png" alt="Hammer Pattern">
+                </a>
+            </div>
+            <h4 class="item">
+                <a href="inverted-hammer/index.html">
+                    <h4>Inverted Hammer</h4>
+                    <img src="inverted-hammer/inverted-hammer1.png" alt="Inverted Hammer Pattern">
+                </a>
+            </h4>
+            <div class="item">
+                <a href="bullish-belt-hold/index.html">
+                    <h4>Bullish Belt Hold</h4>
+                    <img src="bullish-belt-hold/bullish-belt-hold1.png" alt="Bullish Belt Hold Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-engulifing/index.html">
+                    <h4>Bullish Engulfing</h4>
+                    <img src="bullish-engulifing/bullish-engulifing1.png" alt="Bullish Engulfing Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="tweezers-bottom/index.html">
+                    <h4>Tweezers Bottom</h3>
+                        <img src="tweezers-bottom/tweezers-bottom1.png" alt="Tweezers Bottom Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-harami/index.html">
+                    <h4>Bullish Harami</h4>
+                    <img src="bullish-harami/bullish-harami1.png" alt="Bullish Harami Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-harami-cross/index.html">
+                    <h4>Bullish Harami Cross</h4>
+                    <img src="bullish-harami-cross/bullish-harami-cross1.png" alt="Bullish Harami Cross Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-piercing-line/index.html">
+                    <h4>Bullish Piercing Line</h4>
+                    <img src="bullish-piercing-line/bullish-piercing-line1.png" alt="Bullish Piercing Line Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-abandoned-baby/index.html">
+                    <h4>Bullish Abandoned Baby</h4>
+                    <img src="bullish-abandoned-baby/bullish-abandoned-baby1.png" alt="Bullish Abandoned Baby Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="morning-star/index.html">
+                    <h4>Morning Star</h4>
+                    <img src="morning-star/morning-star1.png" alt="Morning Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="morning-doji-star/index.html">
+                    <h4>Morning Doji Star</h4>
+                    <img src="morning-doji-star/morning-doji-star1.png" alt="Morning Doji Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-tri-star/index.html">
+                    <h4>Bullish Tri-Star</h4>
+                    <img src="bullish-tri-star/bullish-tri-star1.png" alt="Bullish Tri-Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="three-white-soldiers/index.html">
+                    <h4>Three White Soldiers</h4>
+                    <img src="three-white-soldiers/three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+                </a>
+            </div>
+        </h4>
+        <hr>
         <div class="item">
-            <a href="inverted-hammer/index.html">
-                <h3>Inverted Hammer</h3>
-                <img src="inverted-hammer/inverted-hammer1.png" alt="Inverted Hammer Pattern">
-            </a>
+            <h3 id="bearish-reversals">الگوهای برگشتی نزولی</h3>
         </div>
-        <div class="item">
-            <a href="bullish-belt-hold/index.html">
-                <h3>Bullish Belt Hold</h3>
-                <img src="bullish-belt-hold/bullish-belt-hold1.png" alt="Bullish Belt Hold Pattern">
-            </a>
+        <div class="table">
+            <div class="item">
+                <a href="hanging-man/index.html">
+                    <h4>Hanging Man</h4>
+                    <img src="hanging-man/hanging-man1.png" alt="Hanging Man Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="shooting-star/index.html">
+                    <h4>Shooting Star</h4>
+                    <img src="shooting-star/shooting-star1.png" alt="Shooting Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-belt-hold/index.html">
+                    <h4>Bearish Belt Hold</h4>
+                    <img src="bearish-belt-hold/bearish-belt-hold1.png" alt="Bearish Belt Hold Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-engulfing/index.html">
+                    <h4>Bearish Engulfing</h4>
+                    <img src="bearish-engulfing/bearish-engulfing1.png" alt="Bearish Engulfing Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="tweezers-top/index.html">
+                    <h4>Tweezers Top</h4>
+                    <img src="tweezers-top/tweezers-top1.png" alt="Tweezers Top Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-harami/index.html">
+                    <h4>Bearish Harami</h4>
+                    <img src="bearish-harami/bearish-harami1.png" alt="Bearish Harami Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-harami-cross/index.html">
+                    <h4>Bearish Harami Cross</h4>
+                    <img src="bearish-harami-cross/bearish-harami-cross1.png" alt="Bearish Harami Cross Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="dark-cloud-cover/index.html">
+                    <h4>Dark Cloud Cover</h4>
+                    <img src="dark-cloud-cover/dark-cloud-cover1.png" alt="Dark Cloud Cover Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="abandoned-baby-pattern/index.html">
+                    <h4>Abandoned Baby Pattern</h4>
+                    <img src="abandoned-baby-pattern/abandoned-baby-pattern1.png" alt="Abandoned Baby Pattern Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="evening-star/index.html">
+                    <h4>Evening Star</h4>
+                    <img src="evening-star/evening-star1.png" alt="Evening Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="evening-doji-star/index.html">
+                    <h4>Evening Doji Star</h4>
+                    <img src="evening-doji-star/evening-doji-star1.png" alt="Evening Doji Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-tri-star/index.html">
+                    <h4>Bearish Tri-Star</h4>
+                    <img src="bearish-tri-star/bearish-tri-star1.png" alt="Bearish Tri-Star Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="three-black-crows/index.html">
+                    <h4>Three Black Crows</h4>
+                    <img src="three-black-crows/three-black-crows1.png" alt="Three Black Crows Pattern">
+                </a>
+            </div>
         </div>
+        <hr>
         <div class="item">
-            <a href="bullish-engulifing/index.html">
-                <h3>Bullish Engulfing</h3>
-                <img src="bullish-engulifing/bullish-engulifing1.png" alt="Bullish Engulfing Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="tweezers-bottom/index.html">
-                <h3>Tweezers Bottom</h3>
-                <img src="tweezers-bottom/tweezers-bottom1.png" alt="Tweezers Bottom Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="bullish-harami/index.html">
-                <h3>Bullish Harami</h3>
-                <img src="bullish-harami/bullish-harami1.png" alt="Bullish Harami Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="bullish-harami-cross/index.html">
-                <h3>Bullish Harami Cross</h3>
-                <img src="bullish-harami-cross/bullish-harami-cross1.png" alt="Bullish Harami Cross Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="bullish-piercing-line/index.html">
-                <h3>Bullish Piercing Line</h3>
-                <img src="bullish-piercing-line/bullish-piercing-line1.png" alt="Bullish Piercing Line Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="bullish-abandoned-baby/index.html">
-                <h3>Bullish Abandoned Baby</h3>
-                <img src="bullish-abandoned-baby/bullish-abandoned-baby1.png" alt="Bullish Abandoned Baby Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="morning-star/index.html">
-                <h3>Morning Star</h3>
-                <img src="morning-star/morning-star1.png" alt="Morning Star Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="morning-doji-star/index.html">
-                <h3>Morning Doji Star</h3>
-                <img src="morning-doji-star/morning-doji-star1.png" alt="Morning Doji Star Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="bullish-tri-star/index.html">
-                <h3>Bullish Tri-Star</h3>
-                <img src="bullish-tri-star/bullish-tri-star1.png" alt="Bullish Tri-Star Pattern">
-            </a>
-        </div>
-        <div class="item">
-            <a href="three-white-soldiers/index.html">
-                <h3>Three White Soldiers</h3>
-                <img src="three-white-soldiers/three-white-soldiers1.png" alt="Three White Soldiers Pattern">
-            </a>
+            <h3 id="bearish-reversals">الگوهای ادامه دهنده</h3>
         </div>
     </div>
 
