--- a/candlestick/morning-doji-star/index.html
+++ b/candlestick/morning-doji-star/index.html
@@ -23,17 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Morning Doji Star</h3>
+        <h4>Morning Doji Star</h4>
         <img src="morning-doji-star1.png" alt="Morning Doji Star Pattern">
     </div>
-    <br>
 
     <div id="content">
-        ترکیب این الگوي سه شمعی بسیار شبیه به الگوي ستاره صبحگاهی می باشد با این تفاوت که بین شمع اول و دوم به علاوه
-        بین شمع دوم و سوم شکافی دیده نمی شود شمع اول پرقدرت و نزولی، شمع دوم دوجی Doji و شمع سوم داراي بدنه
-        صعودي می باشد. با بسته شدن صعودي شمع سوم اخطار انتهاي روند نزولی و آغاز روند صعودي اعلام می شود.
+        ترکیب این الگوی سه شمعی بسیار شبیه به الگوی ستاره صبحگاهی می باشد با این تفاوت که بین شمع اول و دوم به علاوه
+        بین شمع دوم و سوم شکافی دیده نمی شود شمع اول پرقدرت و نزولی، شمع دوم دوجی Doji و شمع سوم دارای بدنه
+        صعودی می باشد. با بسته شدن صعودی شمع سوم اخطار انتهای روند نزولی و آغاز روند صعودی اعلام می شود.
     </div>
 
     <script src="../../assets/script.js"></script>
