--- a/candlestick/morning-star/index.html
+++ b/candlestick/morning-star/index.html
@@ -23,18 +23,20 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Morning Star</h3>
+        <h4>Morning Star</h4>
         <img src="morning-star1.png" alt="Morning Star Pattern">
     </div>
-    <br>
 
     <div id="content">
-        الگوي ستاره صبحگاهی از مجموع سه شمع در انتهاي روند نزولی تشکیل می شود شمع اول نزولی و پرقدرت، شمع دوم با
-        شکاف (گپ) نزولی آغاز شده و بدنه آن میتواند نزولی یا صعودي باشد ولی در غالب موارد بدنه و سایه هاي بزرگی ندارد و
-        شمع سوم یک شمع صعودي است که آغاز آن با شکاف (گپ) صعودي نسبت به شمع دوم آغاز شده است. این سه شمع
-        اخطار روند صعودي را در انتهاي روند نزولی اعلام می نمایند.
+        الگوی ستاره صبحگاهی از مجموع سه شمع در انتهای روند نزولی تشکیل می شود شمع اول نزولی و پرقدرت، شمع دوم با
+        شکاف (گپ) نزولی آغاز شده و بدنه آن میتواند نزولی یا صعودی باشد ولی در غالب موارد بدنه و سایه های بزرگی ندارد و
+        شمع سوم یک شمع صعودی است که آغاز آن با شکاف (گپ) صعودی نسبت به شمع دوم آغاز شده است. این سه شمع
+        اخطار روند صعودی را در انتهای روند نزولی اعلام می نمایند.
     </div>
 
     <script src="../../assets/script.js"></script>
