--- a/candlestick/tweezers-bottom/index.html
+++ b/candlestick/tweezers-bottom/index.html
@@ -23,18 +23,20 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Tweezers Bottom</h3>
+        <h4>Tweezers Bottom</h4>
         <img src="tweezers-bottom1.png" alt="Tweezers Bottom Pattern">
     </div>
-    <br>
 
     <div id="content">
-        الگوي انبرك پایینی مانند الگوي قبلی شامل دو شمع با رنگ هاي متفاوت می باشد. با این تفاوت که ابتدا شمعی نزولی
-        (مشکی) با بدنه بزرگ تشکیل می شود این شمع فاقد سایه یا با سایه هاي کوچک می باشد. شمع دوم در دل محدوده قیمت
-        شمع اول به شکل ستاره (داجی) یا چکش معکوس تشکیل می شود. براي اهمیت بیشتر تغییر روند از نزولی به صعودي در
-        این الگو، خارج نشدن سایه هاي شمع دوم از شمع اول مهم می باشد.
+        الگوی انبرك پایینی مانند الگوی قبلی شامل دو شمع با رنگ های متفاوت می باشد. با این تفاوت که ابتدا شمعی نزولی
+        (مشکی) با بدنه بزرگ تشکیل می شود این شمع فاقد سایه یا با سایه های کوچک می باشد. شمع دوم در دل محدوده قیمت
+        شمع اول به شکل ستاره (داجی) یا چکش معکوس تشکیل می شود. برای اهمیت بیشتر تغییر روند از نزولی به صعودی در
+        این الگو، خارج نشدن سایه های شمع دوم از شمع اول مهم می باشد.
     </div>
 
     <script src="../../assets/script.js"></script>
