--- a/candlestick/bearish-belt-hold/index.html
+++ b/candlestick/bearish-belt-hold/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
-    
+
     <div class="item">
-        <h4>Bullish Belt Hold</h4>
-        <img src="bullish-belt-hold1.png" alt="Bullish Belt Hold Pattern">
+        <h4>Bearish Belt Hold</h4>
+        <img src="bearish-belt-hold1.png" alt="Bearish Belt Hold Pattern">
     </div>
 
     <div id="content">
-        این الگو در بازار بسیار نادر می باشد و مدلی از Marubozu Opening می باشد. در روند نزولی قیمت آغازین این کندل با
-        گپ (شکاف) رو به پایین باز می شود اما در ادامه شاهد هیچ سایه پایینی نمی باشیم قیمت از نقطه آغاز رو به بالا حرکت
-        کرده و بدنه نسبتا بزرگی را شاهد هستیم. اگر سایه و بدنه این الگو فاصله گپ (شکاف) را پر نماید می تواند نشانگر آغاز روند
+        این الگو در بازار بسیار نادر می باشد و مدلی از Marubozu Opening می باشد. در روند صعودی قیمت آغازین این کندل
+        با گپ (شکاف) رو به بالا باز می شود اما در ادامه شاهد هیچ سایه بالایی نمی باشیم. قیمت از نقطه آغاز رو به پایین حرکت
+        کرده و بدنه نسبتا بزرگی را شاهد هستیم. اگر سایه و بدنه این الگو فاصله گپ (شکاف) را پر نماید می تواند نشانگر آغاز روند
         صعودی باشد.
     </div>
 
