--- a/candlestick/bearish-engulfing/index.html
+++ b/candlestick/bearish-engulfing/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Bullish Engulfing</h4>
-        <img src="bullish-engulifing1.png" alt="Bullish Engulfing Pattern">
+        <h4>Bearish Engulfing</h4>
+        <img src="bearish-engulfing1.png" alt="Bearish Engulfing Pattern">
     </div>
 
     <div id="content">
-        این الگو (پوشاننده صعودی) شامل دو شمع با رنگ های متفاوت است که در انتهای روند نزولی تشکیل می شود. کل بدنه
-        سفید (صعودی) شمع دوم، بدنه شمع اول مشکی (نزولی) را پوشش می دهد. اندازه سایه ها در این دو کندل اهمیتی ندارد.
-        ایجاد شکاف (گپ) بین نقطه پایان کندل اول و نقطه آغاز کندل دوم اهمیت بیشتری به این الگو برای آغاز روند صعودی می
+        این الگو (پوشاننده نزولی) شامل دو شمع با رنگ های متفاوت است که در انتهای روند صعودی تشکیل می شود. کل بدنه
+        مشکی (نزولی) شمع دوم، بدنه شمع اول سفید (صعودی) را پوشش می دهد. اندازه سایه ها در این دو کندل اهمیتی ندارد.
+        ایجاد شکاف (گپ) بین نقطه پایان کندل اول و نقطه آغاز کندل دوم اهمیت بیشتری به این الگو برای آغاز روند نزولی می
         دهد.
     </div>
 
