--- a/candlestick/bearish-harami-cross/index.html
+++ b/candlestick/bearish-harami-cross/index.html
@@ -23,19 +23,18 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Bearish Harami Cross</h4>
+        <img src="bearish-harami-cross1.png" alt="Bearish Harami Cross Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        صلیب هارامی نزولی شباهت بسیاری به الگوی قبلی دارد با این تفاوت که بدنه شمع دوم حتما بصورت داجی (ستاره) تشکیل
+        شده است. این الگو در انتهای روند صعودی تشکیل می شود و اخطار تغییر روند را صادر می کند.
     </div>
 
     <script src="../../assets/script.js"></script>
