--- a/candlestick/dark-cloud-cover/index.html
+++ b/candlestick/dark-cloud-cover/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Dark Cloud Cover</h4>
+        <img src="dark-cloud-cover1.png" alt="Dark Cloud Cover Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        در این الگو (پوشای ابر مشکی) شاهد دو شمع با رنگ های متفاوت هستیم در شمع اول بدنه سفید (صعودی) و شمع دوم
+        بدنه ای مشکی (نزولی) با نقطه پایانی بالاتر از نقطه آغازین شمع قبلی می بینیم و نقطه آغاز شمع دوم با شکافی صعودی
+        نسبت به پایان شمع اول شروع شده است. این الگو در انتهای روند صعودی تشکیل شده و نمایشگر آغاز روند نزولی می باشد.
     </div>
 
     <script src="../../assets/script.js"></script>
