--- a/candlestick/evening-doji-star/index.html
+++ b/candlestick/evening-doji-star/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Evening Doji Star</h4>
+        <img src="evening-doji-star1.png" alt="Evening Doji Star Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        ترکیب این الگوی سه شمعی بسیار شبیه به الگوی ستاره عصرگاهی می باشد با این تفاوت که بین شمع اول و دوم به علاوه
+        بین شمع دوم و سوم شکافی دیده نمی شود شمع اول پرقدرت و صعودی، شمع دوم Doji و شمع سوم دارای بدنه نزولی می
+        باشد. با بسته شدن نزولی شمع سوم اخطار انتهای روند صعودی و آغاز روند نزولی اعلام می شود.
     </div>
 
     <script src="../../assets/script.js"></script>
