--- a/candlestick/inverted-hammer/index.html
+++ b/candlestick/inverted-hammer/index.html
@@ -23,17 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
+    <a href="../index.html#bullish-reversals">
+        <h3>الگوهای برگشتی صعودی</h3>
+    </a>
 
     <div class="item">
-        <h3>Inverted Hammer</h3>
+        <h4>Inverted Hammer</h4>
         <img src="inverted-hammer1.png" alt="Inverted Hammer Pattern">
     </div>
-    <br>
 
     <div id="content">
-        الگوي هامر معکوس (چکش معکوس) مانند الگوي چکش در انتهاي یک روند نزولی تشکیل می شود. سایه بالایی بلند، سایه
-        پایینی کوتاه و یا وجود نداشتن سایه پایینی و بدنه اي حداثر یک دوم سایه بالایی از خصوصیات این الگو می باشد .در این
-        الگو رنگ بدنه تفاوتی ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد
+        الگوی هامر معکوس (چکش معکوس) مانند الگوی چکش در انتهای یک روند نزولی تشکیل می شود. سایه بالایی بلند، سایه
+        پایینی کوتاه و یا وجود نداشتن سایه پایینی و بدنه ای حداثر یک دوم سایه بالایی از خصوصیات این الگو می باشد .در این
+        الگو رنگ بدنه تفاوتی ندارد اما بدنه صعودی (سفید) قدرت بیشتر این الگو را برای بازگشت روند نشان می دهد
     </div>
 
     <script src="../../assets/script.js"></script>
