--- a/candlestick/three-black-crows/index.html
+++ b/candlestick/three-black-crows/index.html
@@ -23,19 +23,19 @@
     <a href="../index.html">
         <h2>الگوهای کندل استیک ها</h2>
     </a>
-    <a href="../index.html#bullish-reversals">
-        <h3>الگوهای برگشتی صعودی</h3>
+    <a href="../index.html#bearish-reversals">
+        <h3>الگوهای برگشتی نزولی</h3>
     </a>
 
     <div class="item">
-        <h4>Three White Soldiers</h4>
-        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
+        <h4>Three Black Crows</h4>
+        <img src="three-black-crows1.png" alt="Three Black Crows Pattern">
     </div>
 
     <div id="content">
-        الگوی سه مکعب سفید از سه شمع صعودی با بدنه های توخالی و صعودی قوی تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
-        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر
-        روند از نزولی به صعودی ایجاد می شود.
+        الگوی سه اهرم مشکی از سه شمع نزولی با بدنه های توپر و نزولی قوی تشکیل شده است. سایه ها غالبا کوتاه و ایجاد شکاف
+        صعودی بین شمع اول، دوم و شکاف صعودی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوی تغییر روند
+        از صعودی به نزولی ایجاد می شود.
     </div>
 
     <script src="../../assets/script.js"></script>
