--- a/candlestick/index.html
+++ b/candlestick/index.html
@@ -22,7 +22,7 @@
     </a>
     <h2>الگوهای کندل استیک ها</h2>
 
-    <h4 id="content">
+    <div id="content">
         <div class="item">
             <h3 id="bullish-reversals">الگوهای برگشتی صعودی</h3>
         </div>
@@ -33,12 +33,12 @@
                     <img src="hammer/hammer1.png" alt="Hammer Pattern">
                 </a>
             </div>
-            <h4 class="item">
+            <div class="item">
                 <a href="inverted-hammer/index.html">
                     <h4>Inverted Hammer</h4>
                     <img src="inverted-hammer/inverted-hammer1.png" alt="Inverted Hammer Pattern">
                 </a>
-            </h4>
+            </div>
             <div class="item">
                 <a href="bullish-belt-hold/index.html">
                     <h4>Bullish Belt Hold</h4>
@@ -105,7 +105,7 @@
                     <img src="three-white-soldiers/three-white-soldiers1.png" alt="Three White Soldiers Pattern">
                 </a>
             </div>
-        </h4>
+        </div>
         <hr>
         <div class="item">
             <h3 id="bearish-reversals">الگوهای برگشتی نزولی</h3>
@@ -192,9 +192,69 @@
         </div>
         <hr>
         <div class="item">
-            <h3 id="bearish-reversals">الگوهای ادامه دهنده</h3>
+            <h3 id="bullish-continuation">الگوهای ادامه دهنده صعودی</h3>
+        </div>
+        <div class="table">
+            <div class="item">
+                <a href="upside-tasuki-gap/index.html">
+                    <h4>Upside Tasuki Gap</h4>
+                    <img src="upside-tasuki-gap/upside-tasuki-gap1.png" alt="Upside Tasuki Gap Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-separating-lines/index.html">
+                    <h4>Bullish Separating Lines</h4>
+                    <img src="bullish-separating-lines/bullish-separating-lines1.png"
+                        alt="Bullish Separating Lines Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bullish-in-neck-line/index.html">
+                    <h4>Bullish In Neck Line</h4>
+                    <img src="bullish-in-neck-line/bullish-in-neck-line1.png" alt="Bullish In Neck Line Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="rising-three-methods/index.html">
+                    <h4>Rising Three Methods</h4>
+                    <img src="rising-three-methods/rising-three-methods1.png" alt="Rising Three Methods Pattern">
+                </a>
+            </div>
+        </div>
+        <hr>
+        <div class="item">
+            <h3 id="bearish-continuation">الگوهای ادامه دهنده نزولی</h3>
+        </div>
+        <div class="table">
+            <div class="item">
+                <a href="downside-tasuki-gap/index.html">
+                    <h4>Downside Tasuki Gap</h4>
+                    <img src="downside-tasuki-gap/downside-tasuki-gap1.png" alt="Downside Tasuki Gap Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-separating-lines/index.html">
+                    <h4>Bearish Separating Lines</h4>
+                    <img src="bearish-separating-lines/bearish-separating-lines1.png"
+                        alt="Bearish Separating Lines Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="bearish-in-neck-line/index.html">
+                    <h4>Bearish In Neck Line</h4>
+                    <img src="bearish-in-neck-line/bearish-in-neck-line1.png" alt="Bearish In Neck Line Pattern">
+                </a>
+            </div>
+            <div class="item">
+                <a href="falling-three-methods/index.html">
+                    <h4>Falling Three Methods</h4>
+                    <img src="falling-three-methods/falling-three-methods1.png" alt="Falling Three Methods Pattern">
+                </a>
+            </div>
         </div>
     </div>
+
+    <!-- TODO on neck line and  the other one -->
 
     <script src="../assets/script.js"></script>
 </body>
